--- a/points/static/css/style.css
+++ b/points/static/css/style.css
@@ -10,10 +10,15 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
     
 }
+.wrapper {
+    flex: 1; /* Растягивает основной контент */
+  }
 div#main{
     flex: 1;
+    width: 100%;
 }
 div#content{
     clear: both;
@@ -29,6 +34,7 @@ header{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 footer{
+    width: 98%;
     padding: 1em;
     color: white;
     background-color: #ffa500;
@@ -93,12 +99,21 @@ div#actions{
     justify-content: space-between;
 }
 button{
-    padding: 0.5em;
-    margin: 10px;
-    background-color: orange;
-    border-radius: 8px;
-    border: orange;
+    background-color: #ffa500;
+    font-family: 'Sofia Sans';
+    font-size: 120%;
+    color: brown;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 10px;
 }
+button:hover {
+    background-color: #ff8c00; /* Цвет фона при наведении */
+    color: white; /* Цвет текста при наведении (по желанию) */
+}
+
 
 div #logo img{
     width: 80px;
@@ -128,13 +143,27 @@ div #starttext{
     font-weight: 400;
 }
 
-table#form{
-    width: 80%;
-    margin: auto;
+
+
+/* Стили для полей ввода */
+input[type="text"],
+input[type="tel"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; /* Учитываем padding в ширине */
 }
-table#form td{
-    text-align: center;
+
+.button-container {
+    display: flex;
+    justify-content: center; /* Центрирует содержимое по горизонтали */
+    margin: 20px;
+
 }
+
+
 table#points{
     width: 80%;
     margin: auto;
@@ -300,8 +329,26 @@ ul{
     margin: 0; /* Reset margin */
 }
 
+.contact-container{
+    margin: 30px auto;
+    background-color: rgb(255, 202, 103);
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 200%;
+    max-width: 800px;
+    text-align: center;
+}
+.contact-container .form-field label {
+    display: block; /* Лейбл над полем */
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-family: 'Sofia Sans';
+    color: brown;
+}
+
 .auth-container {
-    background-color: #ffffff;
+    background-color: rgb(255, 202, 103);
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -348,44 +395,33 @@ ul{
     outline: none;
 }
 
-.auth-container form button {
-    background-color: #007bff;
-    color: #ffffff;
-    padding: 0.75rem;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.auth-container form button:hover {
-    background-color: #0056b3;
-}
-
 .auth-container .error-message {
     color: #dc3545;
     font-size: 0.9rem;
     margin-top: 1rem;
 }
-
-.auth-container .register-link {
-    margin-top: 1.5rem;
-    font-size: 0.9rem;
-    color: #555555;
+.auth-container .form-field {
+    margin: 1rem;
+    text-align: left;
 }
 
-.auth-container .register-link a {
-    color: #007bff;
-    text-decoration: none;
+.auth-container .form-field label {
+    display: block; /* Лейбл над полем */
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-family: 'Sofia Sans';
+    color: brown;
 }
 
-.auth-container .register-link a:hover {
-    text-decoration: underline;
+.auth-container .form-field input {
+    width: 100%;
+    padding: 0.75rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
 .register-container {
-    background-color: #ffffff;
+    background-color: rgb(255, 202, 103);
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -429,37 +465,29 @@ ul{
     border-color: #007bff;
     outline: none;
 }
-.register-container form button {
-    background-color: #007bff;
-    color: #ffffff;
-    padding: 0.75rem;
-    border: none;
-    border-radius: 4px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 
-.register-container form button:hover {
-    background-color: #0056b3;
-}
 
 .register-container .error-message {
     color: #dc3545;
     font-size: 0.9rem;
     margin-top: 1rem;
 }
-.register-container .login-link {
-    margin-top: 1.5rem;
-    font-size: 0.9rem;
-    color: #555555;
+.register-container .form-field {
+    margin: 1rem;
+    text-align: left;
 }
 
-.register-container .login-link a {
-    color: #007bff;
-    text-decoration: none;
+.register-container .form-field label {
+    display: block; /* Лейбл над полем */
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-family: 'Sofia Sans';
+    color: brown;
 }
 
-.register-container .login-link a:hover {
-    text-decoration: underline;
+.register-container .form-field input {
+    width: 100%;
+    padding: 0.75rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
