--- a/points/templates/registration_page.html
+++ b/points/templates/registration_page.html
@@ -2,21 +2,33 @@
 <html lang="en">
 <head>
     {% load static %} 
-    <link href = "{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">   
+    <meta http-equiv="Content-Type"
+    content="=text/html; charset = utf-8">
     <title>Регистрация</title>
 </head>
 <body>
-    <p>Регистрация</p>
-    {% if form %}
+    <div class="register-container">
+        <h1>Регистрация</h1>
         <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Зарегистрироваться</button>
+          {% csrf_token %}
+          {% for field in form %}
+            <div class="form-field"> <!-- Новый контейнер для каждого поля -->
+              {{ field.label_tag }}
+              {{ field }}
+              {% if field.errors %}
+                <div class="error-message">{{ field.errors }}</div>
+              {% endif %}
+            </div>
+          {% endfor %}
+          <button type="submit">Зарегистрироваться</button>
         </form>
-    {% else %}
-        <p>Форма не передана в шаблон.</p>
-    {% endif %}
+      </div>
+    <footer>
+        <a href="{% url 'contacts' %}">Свяжитесь с нами!</a>
+    </footer>
 </body>
 </html>
